<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pinkimage">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="15dp"
                android:drawableTop="@mipmap/oil_paint_video1"
                android:textSize="20dp"
                android:text="@string/oil_paint_vid1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@mipmap/oil_paint1" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@mipmap/oil_paint2" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="292dp"
                android:layout_height="169dp"
                android:layout_margin="15dp"
                android:drawableTop="@mipmap/oil_paint_video2"
                android:text="@string/oil_paint_vid2"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@mipmap/oil_paint3" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableTop="@mipmap/oil_paint4"
                android:text="@string/oil_paint_article"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>